--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -85,7 +85,7 @@
   </div>{#-- /.content --#}
 </header>{#-- /#header --#}
 
-<section id="products-primary" {% if l10n_has_tag('tracking_protection') %}class="ios-active"{% endif %}>
+<section id="products-primary">
   <div class="content">
     <ul class="product-list">
       <li class="product" id="product-desktop">
@@ -98,17 +98,6 @@
         </div>
       </li>
 
-      <li class="product" id="product-android">
-        <div class="inner">
-          <a href="{{ url('firefox.android.index') }}" data-product="Firefox for Android">
-            {# L10n: span below adds visual style to "for" text #}
-            <h2>{{ _('Firefox <span>for</span> Android') }}</h2>
-            <p>{{ _('Make it uniquely yours.') }}</p>
-          </a>
-        </div>
-      </li>
-
-    {% if l10n_has_tag('tracking_protection') %}
       <li class="product highlight" id="product-ios">
         <div class="inner">
           <a href="{{ url('firefox.ios') }}" data-product="Firefox for iOS">
@@ -126,16 +115,17 @@
           </a>
         </div>
       </li>
-    {% endif %}
 
-      <li class="product" id="product-fxos">
+      <li class="product" id="product-android">
         <div class="inner">
-          <a href="{{ url('firefox.os.index') }}" data-product="Firefox OS">
-            <h2>{{ _('Firefox OS') }}</h2>
-            <p>{{ _('Get just what you need.') }}</p>
+          <a href="{{ url('firefox.android.index') }}" data-product="Firefox for Android">
+            {# L10n: span below adds visual style to "for" text #}
+            <h2>{{ _('Firefox <span>for</span> Android') }}</h2>
+            <p>{{ _('Make it uniquely yours.') }}</p>
           </a>
         </div>
       </li>
+
     </ul>
   </div>{#-- /.content --#}
 </section>{#-- /#products-primary --#}
@@ -157,21 +147,13 @@
         </a>
       </li>
 
-    {% if l10n_has_tag('tracking_protection') %}
       <li class="product" id="product-private-browsing">
         <a href="{{ url('firefox.private-browsing') }}" data-product="Private Browsing">
           <h2>{{ _('Private Browsing') }}</h2>
           <p>{{ _('Now with Tracking Protection.') }}</p>
         </a>
       </li>
-    {% else %}
-      <li class="product" id="product-marketplace">
-        <a rel="external" href="https://marketplace.firefox.com/" data-product="Firefox Marketplace">
-          <h2>{{ _('Firefox Marketplace') }}</h2>
-          <p>{{ _('Discover and download Web apps.') }}</p>
-        </a>
-      </li>
-    {% endif %}
+
     </ul>
   </div>{#-- /.content --#}
 </section>{#-- /#products-secondary --#}
