Fix Bug 1249610, add new infobar to bedrock

--- a/bedrock/base/templates/base-resp.html
+++ b/bedrock/base/templates/base-resp.html
@@ -92,6 +92,16 @@
       {% block string_data %}{% endblock %}></div>
     <div id="outer-wrapper">
 
+    {% block infobar %}
+      <div id="mozilla-infobar" class="mozilla-infobar hidden" role="dialog" aria-hidden="true" data-infobar="{% block infobar_bars %}update translate{% endblock %}">
+        <p></p>
+        <ul>
+          <li><a href="https://support.mozilla.org/kb/update-firefox-latest-version" class="btn-accept button-flat-green"></a></li>
+          <li><button class="btn-cancel" type="button"></button></li>
+        </ul>
+      </div>
+    {% endblock %}
+
     {# for headers not to be confined by #wrapper (like fx family nav) #}
     {% block site_header_unwrapped %}{% endblock %}
 
