--- a/bedrock/firefox/templates/firefox/australis/firstrun.html
+++ b/bedrock/firefox/templates/firefox/australis/firstrun.html
@@ -22,6 +22,8 @@
   {% javascript 'firefox_tour_none' %}
 {% endblock %}
 
+{% block infobar %}{% endblock %}
+
 {% block main_heading %}
   <header role="banner">
     <div class="logo"></div>
