--- a/bedrock/firefox/templates/firefox/australis/fx36/tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/tour.html
@@ -52,6 +52,8 @@ data-step3="{{ _('3/4') }}"
 data-step4="{{ _('4/4') }}"
 {% endblock %}
 
+{% block infobar %}{% endblock %}
+
 {% block site_header %}
   <header id="masthead">
     <div id="tabzilla">
