--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -33,6 +33,8 @@
 
 {% block body_class %}mozid{% endblock %}
 
+{% block infobar_bars %}translate{% endblock %}
+
 {% block site_header %}
   <div id="conditional-download-bar">
     <div class="content">
