--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -40,6 +40,8 @@ set share_urls = {
 }
 %}
 
+{% block infobar_bars %}translate{% endblock %}
+
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
