--- a/bedrock/firefox/templates/firefox/private-browsing.html
+++ b/bedrock/firefox/templates/firefox/private-browsing.html
@@ -18,6 +18,8 @@
 
 {% block site_header %}{% endblock %}
 
+{% block infobar_bars %}translate{% endblock %}
+
 {% block site_header_unwrapped %}
   {{ fxfamilynav('desktop', 'private-browsing') }}
 {% endblock %}
