--- a/bedrock/firefox/templates/firefox/tracking-protection-tour.html
+++ b/bedrock/firefox/templates/firefox/tracking-protection-tour.html
@@ -53,6 +53,8 @@ data-panel3-button="{{ _('Got it!') }}"
 {% block body_id %}tracking-protection-tour{% endblock %}
 {% block body_class %}{% endblock %}
 
+{% block infobar_bars %}update{% endblock %}
+
 {% block site_header %}{% endblock %}
 
 {% block content %}
