--- a/bedrock/firefox/templates/firefox/dev-firstrun.html
+++ b/bedrock/firefox/templates/firefox/dev-firstrun.html
@@ -51,6 +51,8 @@ data-sync-reminder-text="{{ _('If you continue without syncing your new Develope
 
 {% endblock %}
 
+{% block infobar %}{% endblock %}
+
 {% block site_header_nav %}{% endblock %}
 {% block site_header_logo %}
   <h2>{{ high_res_img('firefox/firstrun/dev/title.png', {'alt': _('Firefox Developer Edition'), 'width': '220', 'height': '84'}) }}</h2>
