--- a/bedrock/firefox/templates/firefox/hello/index-2016.html
+++ b/bedrock/firefox/templates/firefox/hello/index-2016.html
@@ -25,6 +25,8 @@
   {% endif %}
 {% endblock %}
 
+{% block infobar_bars %}translate{% endblock %}
+
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
