--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -22,6 +22,8 @@
 
 {% block site_header %}{% endblock %}
 
+{% block infobar_bars %}translate{% endblock %}
+
 {% block site_header_unwrapped %}
   {{ fxfamilynav('desktop', 'sync', 'dark') }}
 {% endblock %}
