--- a/bedrock/mozorg/templates/mozorg/plugincheck-d.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck-d.html
@@ -75,6 +75,8 @@
   data-media-url="{{ static('') }}"
 {% endblock %}
 
+{% block infobar_bars %}translate{% endblock %}
+
 {% block site_header_logo %}{% endblock %}
 
 {% block site_header_share %}
