--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -26,6 +26,12 @@
   {{ fxfamilynav('desktop', 'sync', 'dark') }}
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('firefox-sync') %}
+    {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block content %}
 {% include 'firefox/includes/sync-animation.html' %}
 <header role="banner" class="intro container">
