--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -90,9 +90,9 @@
 <aside class="mozilla-share-cta{% if class %} {{ class }}{% endif %}" tabindex="0"{% if id %} id="{{ id }}"{% endif -%}>
   <h3>{{ cta_text }}</h3>
   <ul>
-    <li><a class="twitter" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&text=%s'|format(share_urls.get('twitter')|urlencode, share_text|urlencode)|e }}" title="Twitter" data-button-type="social" data-social-network="Twitter">Twitter</a></li>
-    <li><a class="facebook" href="{{ 'https://www.facebook.com/sharer/sharer.php?u=%s'|format(share_urls.get('facebook')|urlencode)|e }}" title="Facebook" data-button-type="social" data-social-network="Facebook">Facebook</a></li>
-    <li><a class="g-plus" href="{{ 'https://plus.google.com/share?url=%s&hl=%s'|format(share_urls.get('googleplus')|urlencode, LANG)|e }}" title="Google+" data-button-type="social" data-social-network="Google+">Google+</a></li>
+    <li><a class="twitter" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&text=%s'|format(share_urls.get('twitter')|urlencode, share_text|urlencode)|e }}" title="Twitter" data-link-type="social share" data-link-name="Twitter">Twitter</a></li>
+    <li><a class="facebook" href="{{ 'https://www.facebook.com/sharer/sharer.php?u=%s'|format(share_urls.get('facebook')|urlencode)|e }}" title="Facebook" data-link-type="social share" data-link-name="Facebook">Facebook</a></li>
+    <li><a class="g-plus" href="{{ 'https://plus.google.com/share?url=%s&hl=%s'|format(share_urls.get('googleplus')|urlencode, LANG)|e }}" title="Google+" data-link-type="social share" data-link-name="Google+">Google+</a></li>
   </ul>
 </aside>
 {%- endmacro %}
