--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -229,9 +229,9 @@
           <a data-id="ios" href="{{ url('firefox.ios') }}" class="primary-link" data-link-type="nav" data-link-name="for iOS"><div>{{ _('<span>for</span> iOS') }}</div></a>
 
           <ul class="subnav" id="ios-subnav">
-            <li><a href="{{ url('firefox.ios') }}"{% if activesub == 'index' %} class="selected"{% endif %}><div>{{ _('Overview') }}</div></a></li>
-            <li><a href="{{ url('firefox.sync') }}"{% if activesub == 'sync' %} class="selected"{% endif %}><div>{{ _('Sync') }}</div></a></li>
-            <li><a href="{{ url('firefox.private-browsing') }}"{% if activesub == 'private-browsing' %} class="selected"{% endif %}><div>{{ _('Private Browsing') }}</div></a></li>
+            <li><a href="{{ url('firefox.ios') }}"{% if activesub == 'index' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for iOS: Overview"><div>{{ _('Overview') }}</div></a></li>
+            <li><a href="{{ url('firefox.sync') }}"{% if activesub == 'sync' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for iOS: Sync"><div>{{ _('Sync') }}</div></a></li>
+            <li><a href="{{ url('firefox.private-browsing') }}"{% if activesub == 'private-browsing' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for iOS: Private Browsing"><div>{{ _('Private Browsing') }}</div></a></li>
           </ul>
         </li>
         {% if activeprimary == 'os' %}
@@ -270,14 +270,14 @@
       </ul>
 
       <ul class="tertiarynav{% if activeprimary == 'ios' %} active{% endif %}">
-        <li><a rel="external" href="https://support.mozilla.org/products/ios" data-ga="ios - support">{{ _('Need help?') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/ios" data-link-type="nav" data-link-name="Side Menu: Need help?">{{ _('Need help?') }}</a></li>
       </ul>
 
       <ul class="tertiarynav{% if activeprimary == 'os' %} active{% endif %}">
-        <li><a rel="external" href="https://blog.mozilla.org/blog/category/firefox-os/" data-ga="os - news">{{ _('News') }}</a></li>
-        <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-ga="os - developers">{{ _('For developers') }}</a></li>
-        <li><a rel="external" href="https://find.firefox.com" data-ga="os - find my device">{{ _('Find My Device') }}</a></li>
-        <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-ga="os - support">{{ _('Need help?') }}</a></li>
+        <li><a rel="external" href="https://blog.mozilla.org/blog/category/firefox-os/" data-link-type="nav" data-link-name="Side Menu: News">{{ _('News') }}</a></li>
+        <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-link-type="nav" data-link-name="Side Menu: For developers">{{ _('For developers') }}</a></li>
+        <li><a rel="external" href="https://find.firefox.com" data-link-type="nav" data-link-name="Side Menu: Find My Device">{{ _('Find My Device') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-link-type="nav" data-link-name="Side Menu: Need help?">{{ _('Need help?') }}</a></li>
       </ul>
     </div>{#-- /#fxfamilynav-tertiarynav --#}
 
@@ -349,7 +349,9 @@
               <input id="id-input" name="phone-or-email" type="text" required>
             </div>
             <div class="form-submit">
-              <button type="submit" class="button-flat" data-download-os="Android">{{ _('Send') }}</button>
+              <button type="submit" class="button-flat"
+              {% if platform == 'android' %} data-download-os="Android"
+              {% elif platform == 'ios' %} data-download-os="iOS" {% endif %}>{{ _('Send') }}</button>
             </div>
           </div>
           <p class="legal sms">
