--- a/media/css/libs/mapbox-2.3.0.css
+++ b/media/css/libs/mapbox-2.3.0.css
@@ -1,56 +1,3 @@
-/*
-    # MapBox.js
-
-    Copyright (c), MapBox
-    All rights reserved.
-
-    Redistribution and use in source and binary forms, with or without modification,
-    are permitted provided that the following conditions are met:
-
-    - Redistributions of source code must retain the above copyright notice, this
-      list of conditions and the following disclaimer.
-    - Redistributions in binary form must reproduce the above copyright notice, this
-      list of conditions and the following disclaimer in the documentation and/or
-      other materials provided with the distribution.
-    - Neither the name "MapBox" nor the names of its contributors may be
-      used to endorse or promote products derived from this software without
-      specific prior written permission.
-
-    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-    ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
-    ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
-    ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
-    # Contains parts of L.UTFGrid
-
-    Copyright 2012 David Leaver
-
-    Permission is hereby granted, free of charge, to any person obtaining
-    a copy of this software and associated documentation files (the
-    "Software"), to deal in the Software without restriction, including
-    without limitation the rights to use, copy, modify, merge, publish,
-    distribute, sublicense, and/or sell copies of the Software, and to
-    permit persons to whom the Software is furnished to do so, subject to
-    the following conditions:
-
-    The above copyright notice and this permission notice shall be
-    included in all copies or substantial portions of the Software.
-
-    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-    NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
-    LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
-    OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
-    WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
-
 /* general typography */
 .leaflet-container {
   background:#fff;
@@ -345,6 +292,39 @@
   .leaflet-left .leaflet-control-scale    { margin-left:5px; }
   .leaflet-bottom .leaflet-control-scale  { margin-bottom:5px; }
 
+/* Used for smaller map containers & triggered by container size */
+.leaflet-container .leaflet-control-attribution.leaflet-compact-attribution { margin:10px; }
+.leaflet-container .leaflet-control-attribution.leaflet-compact-attribution {
+  background:#fff;
+  border-radius:3px 13px 13px 3px;
+  padding:3px 31px 3px 3px;
+  visibility:hidden;
+  }
+  .leaflet-control-attribution.leaflet-compact-attribution:hover {
+    visibility:visible;
+    }
+
+.leaflet-control-attribution.leaflet-compact-attribution:after {
+  content:'';
+  background-color:#fff;
+  background-color:rgba(255,255,255,0.5);
+  background-position:0 -78px;
+  border-radius:50%;
+  position:absolute;
+  display:inline-block;
+  width:26px;
+  height:26px;
+  vertical-align:middle;
+  bottom:0;
+  z-index:1;
+  visibility:visible;
+  cursor:pointer;
+  }
+  .leaflet-control-attribution.leaflet-compact-attribution:hover:after { background-color:#fff; }
+
+.leaflet-right .leaflet-control-attribution.leaflet-compact-attribution:after { right:0; }
+.leaflet-left .leaflet-control-attribution.leaflet-compact-attribution:after { left:0; }
+
 .leaflet-control-scale-line {
   background-color:rgba(255,255,255,0.5);
   border:1px solid #999;
@@ -392,11 +372,11 @@
   }
 .leaflet-popup-tip {
   width:0;
-    height:0;
+	height:0;
   margin:0;
-    border-left:10px solid transparent;
-    border-right:10px solid transparent;
-    border-top:10px solid #fff;
+	border-left:10px solid transparent;
+	border-right:10px solid transparent;
+	border-top:10px solid #fff;
   box-shadow:none;
   }
 .leaflet-popup-close-button {
@@ -444,6 +424,7 @@
   display:block;
   }
 
+.leaflet-control-attribution:after,
 .leaflet-control-zoom-in,
 .leaflet-control-zoom-out,
 .leaflet-popup-close-button,
@@ -456,6 +437,7 @@
   background-repeat:no-repeat;
   background-size:26px 260px;
   }
+  .leaflet-container.dark .leaflet-control-attribution:after,
   .mapbox-button-icon:before,
   .leaflet-container.dark .leaflet-control-zoom-in,
   .leaflet-container.dark .leaflet-control-zoom-out,
@@ -772,6 +754,7 @@
     background-color:#505050;
     }
 
+.leaflet-container.dark .leaflet-control-attribution:after,
 .leaflet-container.dark .mapbox-info-toggle,
 .leaflet-container.dark .map-info-container,
 .leaflet-container.dark .leaflet-control-attribution {
@@ -785,6 +768,9 @@
     color:#fff;
     }
 
+.leaflet-container.dark .leaflet-control-attribution:hover:after {
+  background-color:#000;
+  }
 .leaflet-container.dark .leaflet-control-layers-list span {
   color:#f8f8f8;
   }
@@ -827,6 +813,10 @@
   margin:0;
   }
 }
+
+/* Print
+------------------------------------------------------- */
+@media print { .mapbox-improve-map { display:none; } }
 
 /* Browser Fixes
 ------------------------------------------------------- */
