--- a/bedrock/foundation/templates/foundation/about.html
+++ b/bedrock/foundation/templates/foundation/about.html
@@ -47,10 +47,15 @@
     {# L10n: This "Chair" is the chairperson of the board of directors, not something to sit on #}
     <li>Mitchell Baker, {{ _('Chair') }}</li>
     <li>Brian Behlendorf</li>
-    <li>Joi Ito</li>
     <li>Bob Lisbonne</li>
     <li>Cathy Davidson</li>
     <li>Ronaldo Lemos</li>
+  </ul>
+
+  <h4>{{ _('Emeritus Board Members') }}</h4>
+  <ul>
+    <li>Joi Ito</li>
+    <li>Mitch Kapor</li>
   </ul>
 
   <p>
