--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -13,7 +13,7 @@
   <h1 class="title-shadow-box">{{ _('Leadership') }}</h1>
 
   <p>
-  {{ _('Our leadership team is made up of both paid staff and volunteers who represent a breadth of experience and expertise in building products that people love and empowering communities to make a significant impact on the project and in the world.') }}
+  {{ _('Our leadership team is made up of both paid staff and volunteers with expertise building products and empowering communities.') }}
   {{ _('While these teams have different day-to-day responsibilities and areas of focus, they are all guided by our non-profit, open-source, community-based mission, identity and values.') }}
   </p>
 
@@ -435,12 +435,6 @@
         </a>
       </li>
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="http://www.media.mit.edu/new-director/bio">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/joi-ito.jpg') }}">
-          <span class="fn" itemprop="name">Joi Ito</span>
-        </a>
-      </li>
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://twitter.com/lisbonne">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/bob-lisbonne.jpg') }}">
           <span class="fn" itemprop="name">Bob Lisbonne</span>
@@ -456,6 +450,22 @@
         <a class="url" itemprop="url" href="https://twitter.com/lemos_ronaldo">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/ronaldo-lemos.jpg') }}">
           <span class="fn" itemprop="name">Ronaldo Lemos</span>
+        </a>
+      </li>
+    </ul>
+
+    <h4>{{ _('Emeritus Board Members') }}</h4>
+    <ul class="gallery">
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://www.media.mit.edu/new-director/bio">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/joi-ito.jpg') }}">
+          <span class="fn" itemprop="name">Joi Ito</span>
+        </a>
+      </li>
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://twitter.com/mkapor">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mitch-kapor.jpg') }}">
+          <span class="fn" itemprop="name">Mitch Kapor</span>
         </a>
       </li>
     </ul>
